dyanmic fragments and parcelables

--- a/corso/src/main/AndroidManifest.xml
+++ b/corso/src/main/AndroidManifest.xml
@@ -8,12 +8,15 @@
         android:name=".CorsoApp">
 
         <activity android:name=".MainAcitivity">
+        </activity>
+
+        <activity android:name=".fragments.DynamicFragmentsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+
             </intent-filter>
         </activity>
-
         <activity android:name=".EditActivity"/>
 
     </application>
