--- a/corso/build.gradle
+++ b/corso/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:19.1.0'
     compile 'com.android.support:appcompat-v7:19.+'
+    compile 'com.squareup.okhttp:okhttp:2.0.0'
 }
 
 
